--- a/public/style.css
+++ b/public/style.css
@@ -227,6 +227,24 @@ input::placeholder{
     
 }
 
+.latest-trailer{
+
+    background: url("assest/image/media-discover-poster.png");
+    padding:40px 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+}
+
+.vedio-details{
+    padding: 30px 0px 30px 30px;
+}
+
+.trailer-details{
+    text-align: center;
+    color: #E4F9F5;
+}
+
 
 .footer{
     background:linear-gradient(to top,#30E3CA 0%,#11999E 100%);
