--- a/public/style.css
+++ b/public/style.css
@@ -119,6 +119,7 @@ input::placeholder{
     top: 0;
     left: 0;
 }
+
 .search form input[type="text"]{
     width: 100%;
     height: 46px;
@@ -161,6 +162,19 @@ input::placeholder{
     text-decoration: none;
     color: #40514E;
     font-weight: 300;
+}
+
+.non-clickable{
+    pointer-events: none;
+}
+
+.weekList{
+    display: none;
+    transition: 0.5s;
+}
+
+.dayList{
+    transition: 0.5s;
 }
 
 .anchor :hover{
@@ -229,10 +243,11 @@ input::placeholder{
 
 .latest-trailer{
 
-    background: url("assest/image/media-discover-poster.png");
+    background: url("assest/image/trailer-bakground.png");
     padding:40px 0;
     background-size: cover;
     background-repeat: no-repeat;
+    color:#E4F9F5;
 
 }
 
@@ -240,11 +255,19 @@ input::placeholder{
     padding: 30px 0px 30px 30px;
 }
 
+iframe{
+    display: inline-block;
+}
+
 .trailer-details{
     text-align: center;
     color: #E4F9F5;
+    flex-direction: row;
 }
 
+.today .week .selected{
+    transition: 1s;
+}
 
 .footer{
     background:linear-gradient(to top,#30E3CA 0%,#11999E 100%);
