--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -1,4 +1,61 @@
-<%- include("navbar.ejs") %>
 
+<%- include("navbar.ejs") %>
+<div class="background-image"></div>
+<section class="movie-container" style="background-image: url('https://image.tmdb.org/t/p/w500/<%= movie.backdrop_path %>');">
+    <% if(locals.movie) {%>
+    <div class="movie-details inner-content flex">
+        <img src="https://image.tmdb.org/t/p/w500/<%= movie.poster_path %>" alt="">
+
+        <div class="movie-overview  flex">
+
+            <h2><%= movie.original_title %></h2>
+            <ul class="flex" style="gap: 25px;">
+                <li style="list-style-type: none;"><%= movie.release_date %></li>
+                <% movie.genres.forEach(element => { %> 
+           
+                        <li><%= element.name %></li>
+        
+                <% }); %>
+                <li>2h 14min</li>
+            </ul>       
+
+            <div class="movie-icons flex">
+                  <div class="user-score flex">
+                    <div class="icon" style="margin: 0;"><%= movie.vote_average.toFixed(2) %></div>
+                    <p style="width: 50px;padding: 8px;margin-right: 30px;">User Score</p>
+                  </div>
+                  
+                  <li class="icon"><i class=" fa-solid fa-list"></i></li>
+                  <li class="icon"><i class=" fa-solid fa-heart"></i></li>
+                  <li class="icon"><i class=" fa-solid fa-bookmark"></i></li>
+                  <li class="icon"><i class=" fa-solid fa-star"></i></li>
+            </div>
+
+            <div> 
+                <h4>Overview</h4>
+                <p class="overview-text"><%= movie.overview %></p>
+            </div>
+
+            <div class="production-details flex">
+                <div class>
+                    <h4>Greg Rucka</h4>
+                    <p>Screenplay, Story</p>
+                </div>
+                <div class="">
+                    <h4>Greg Rucka</h4>
+                    <p>Screenplay, Story</p>
+                </div>
+                <div class="">
+                    <h4>Greg Rucka</h4>
+                    <p>Screenplay, Story</p>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+<% } %>
+
+</section>
 
 <%- include("footer.ejs") %>
