--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FilmyHub</title>
+    <link rel="stylesheet" type="text/css"  href="../style.css">
     <script src="https://kit.fontawesome.com/7eb91cefb3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
 
 </head>
 
