--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <div class="inner-content footer-content flex">
+    <div class="footer-content flex">
 
         <div class="personal-details">
             <h1>FilmyHub.com</h1>
@@ -26,7 +26,7 @@
     </div>
 </footer>
 
-<script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+
 <script src="../script.js"></script>
 </body>
 
