--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
         <% if (trendingMovieListWeek) { %>
           <% for (const movie of trendingMovieListWeek.results) { %>
             <div class="movie-card">
-              <a href="/<%= movie.id %>"></a><img src="https://image.tmdb.org/t/p/w500/<%= movie.poster_path %>" alt="<%= movie.title %> Poster" />
+              <a href="/movie/<%= movie.id %>"><img src="https://image.tmdb.org/t/p/w500/<%= movie.poster_path %>" alt="<%= movie.title %> Poster" /></a>
               <div class="details">
                 <div class="rating" style="font-size: 12px">
                   <%= movie.vote_average.toFixed(2) %>
@@ -151,7 +151,7 @@
         <% if (popularMovieList) { %>
           <% for (const movie of popularMovieList.results) { %>
             <div class="movie-card">
-              <img src="https://image.tmdb.org/t/p/w500/<%= movie.poster_path %>" alt="<%= movie.title %> Poster" />
+              <a href="/movie/<%= movie.id %>"><img src="https://image.tmdb.org/t/p/w500/<%= movie.poster_path %>" alt="<%= movie.title %> Poster" /></a>
               <div class="details">
                 <div class="rating" style="font-size: 12px">
                   <%= movie.vote_average.toFixed(2) %>
@@ -172,7 +172,9 @@
 
 
 
-</script>
+
+
+</section>
 
 
   <%- include("footer.ejs") %>
