--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -7,6 +7,9 @@
     <title>FilmyHub</title>
     <link rel="stylesheet" type="text/css"  href="../style.css">
     <script src="https://kit.fontawesome.com/7eb91cefb3.js" crossorigin="anonymous"></script>
+    
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
 
 </head>
 
@@ -20,7 +23,7 @@
 
                     <li class="nav-item"><a href="" class="nav-link">Movie</a></li>
                     <li class="nav-item"><a href="" class="nav-link">Tv show</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Peope</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">People</a></li>
 
                 </ul>
             </div>
