--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -7,7 +7,7 @@
     <title>FilmyHub</title>
     <link rel="stylesheet" type="text/css"  href="../style.css">
     <script src="https://kit.fontawesome.com/7eb91cefb3.js" crossorigin="anonymous"></script>
-    
+    <script src="../index.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
 
@@ -24,7 +24,7 @@
                     <li class="nav-item"><a href="/" class="nav-link"><i class="fa-solid fa-house"></i></a></li>
                     <li class="nav-item"><a href="/movie" class="nav-link">Movie</a></li>
                     <li class="nav-item"><a href="" class="nav-link">Tv show</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">People</a></li>
+                    <li class="nav-item"><a href="/cast" class="nav-link">People</a></li>
 
                 </ul>
             </div>
@@ -42,7 +42,7 @@
                    
                     <li class="nav-item">
                         <form action="/search" method="get">
-                            <input type="text" name="query" class="search-text">
+                            <input type="text" name="query" class="search-text" placeholder="Search here...">
                             <button type="submit" class="search-btn nav-item"><i class="fa-solid fa-magnifying-glass" id="search-icon"></i></button>
                         </form>
                         
