--- a/public/style.css
+++ b/public/style.css
@@ -555,5 +555,13 @@ iframe{
         flex-wrap: nowrap;
     }
 
+    #movie-title-box{
+        flex-direction: column;
+        align-items: center;
+        overflow: hidden;
+        padding: 0 20px;
+    }
+
+
     
 }
