--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -7,7 +7,6 @@
     <title>FilmyHub</title>
     <link rel="stylesheet" type="text/css"  href="../style.css">
     <script src="https://kit.fontawesome.com/7eb91cefb3.js" crossorigin="anonymous"></script>
-    <script src="../index.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
 
@@ -23,7 +22,7 @@
 
                     <li class="nav-item"><a href="/" class="nav-link"><i class="fa-solid fa-house"></i></a></li>
                     <li class="nav-item"><a href="/movie" class="nav-link">Movie</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Tv show</a></li>
+                    <li class="nav-item"><a href="/tv-show" class="nav-link">Tv show</a></li>
                     <li class="nav-item"><a href="/cast" class="nav-link">People</a></li>
 
                 </ul>
@@ -33,19 +32,19 @@
 
                 <ul class="flex nav-flex inner-content">
 
+                    
+                     <li class="nav-item">
+                         <form action="/search" method="get">
+                             <input type="text" name="query" class="search-text" placeholder="Search here...">
+                             <button type="submit" class="search-btn nav-item"><i class="fa-solid fa-magnifying-glass" id="search-icon"></i></button>
+                         </form>
+                         
+                     </li>
                     <li class="nav-item">
                         <i class="fa-solid fa-bell" id="notification"></i>
                     </li>
                     <li class="nav-item">
-                        <i class="fa-solid fa-user" id="profile"></i>
-                    </li>
-                   
-                    <li class="nav-item">
-                        <form action="/search" method="get">
-                            <input type="text" name="query" class="search-text" placeholder="Search here...">
-                            <button type="submit" class="search-btn nav-item"><i class="fa-solid fa-magnifying-glass" id="search-icon"></i></button>
-                        </form>
-                        
+                        <a href="/signup"><i class="fa-solid fa-user" id="profile"></i></a>
                     </li>
                 </ul>
 
