--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
     <div class="form-container">
         <p class="title">Hey Moviegoer !</p>
         <form class="form" method="post" action="/login">
-            <input type="text" class="input" placeholder="Email" name="email">
+            <input type="text" class="input" placeholder="Email or Username" name="username">
             <input type="password" class="input" placeholder="Password" name="password">
             <button type="submit" class="form-btn">Log in</button>
         </form>
