--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -15,12 +15,14 @@
 <body>
 
     <nav>
+        <i class="fa-solid fa-bars" id="menu-btn"></i>
         <div class="navbar flex">
             <div class="nav-left inner-content">
 
                 <ul class="flex nav-flex">
 
-                    <li class="nav-item"><a href="/" class="nav-link"><i class="fa-solid fa-house"></i></a></li>
+                    <li class="nav-item" id="home-btn"><a href="/" class="nav-link"><i class="fa-solid fa-house"></i></a></li>
+                    <i class="fa-solid fa-xmark" class="nav-link" id="close-btn"></i>
                     <li class="nav-item"><a href="/movie" class="nav-link">Movie</a></li>
                     <li class="nav-item"><a href="/tv-show" class="nav-link">Tv show</a></li>
                     <li class="nav-item"><a href="/cast" class="nav-link">People</a></li>
