--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -16,6 +16,7 @@
 
     <nav>
         <i class="fa-solid fa-bars" id="menu-btn"></i>
+        <a href="/signup"><i class="fa-solid fa-user" id="user-btn"></i></a>
         <div class="navbar flex">
             <div class="nav-left inner-content">
 
@@ -42,9 +43,6 @@
                          </form>
                          
                      </li>
-                    <li class="nav-item">
-                        <i class="fa-solid fa-bell" id="notification"></i>
-                    </li>
                     <li class="nav-item">
                         <a href="/signup"><i class="fa-solid fa-user" id="profile"></i></a>
                     </li>
